resources/instances_ec2.yml
Resources:
   # template de criação do autoscaling group
    InstanceSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
          GroupDescription: Allow http to client host
          GroupName: faceapp
          VpcId: vpc-0dec1670
          SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - CidrIp: 0.0.0.0/0
            FromPort: 22
            IpProtocol: tcp
            ToPort: 22
          SecurityGroupEgress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - CidrIp: 0.0.0.0/0
            FromPort: 22
            IpProtocol: tcp
            ToPort: 22
    ASGappFaceRecognition:
      Type: AWS::EC2::LaunchTemplate
      Properties: 
        LaunchTemplateName: !Sub ASGappFaceRecognition
        LaunchTemplateData: 
          BlockDeviceMappings: 
            - Ebs:
                VolumeSize: 22
                VolumeType: gp2
                DeleteOnTermination: true
                Encrypted: true
              DeviceName: /dev/xvdcz
          CreditSpecification: 
            CpuCredits: Unlimited
          ImageId: ami-02354e95b39ca8dec
          InstanceType: t2.micro
          KeyName: dockerteste
          Monitoring: 
            Enabled: true
          NetworkInterfaces:
          - DeviceIndex: 0
            AssociatePublicIpAddress: true
            Groups:
              - !Ref InstanceSecurityGroup
    ASGFaceRecognition:
      Type: AWS::AutoScaling::AutoScalingGroup
      Properties:
        AvailabilityZones: !GetAZs ''
        AutoScalingGroupName: ASG-apps-FaceRecognition
        MinSize: "1"
        MaxSize: "6"
        DesiredCapacity: "2"
        HealthCheckGracePeriod: 300
        LaunchTemplate:
          LaunchTemplateId: !Ref ASGappFaceRecognition
          Version: !GetAtt ASGappFaceRecognition.LatestVersionNumber
        MetricsCollection: 
          - Granularity: "1Minute"
            Metrics: 
              - "GroupMinSize"
              - "GroupMaxSize"
        Tags:
          - Key: Environment
            Value: Production
            PropagateAtLaunch: "true"
          - Key: Purpose
            Value: WebServerGroup
            PropagateAtLaunch: "false"
